Downgrading to Java 8 (#24)